@@ -105,7 +105,7 @@ public class RemoveLinksToNotExistentFilesTest {
         fileBefore.toFile().delete();
         List<FieldChange> changes = removeLinks.cleanup(entry);
 
-        assertEquals(expectedChange, changes.get(0));
+        assertEquals(expectedChange, changes.getFirst());
         assertEquals(expectedEntry, entry);
     }
 
@@ -159,7 +159,7 @@ public class RemoveLinksToNotExistentFilesTest {
         fileBefore.toFile().delete();
         List<FieldChange> changes = removeLinks.cleanup(entry);
 
-        assertEquals(expectedChange, changes.get(0));
+        assertEquals(expectedChange, changes.getFirst());
         assertEquals(expectedEntry, entry);
     }
 }
